# sa-oocr

./: .gitignore  ELI5_MODELS.txt  README.md  animal_plant_discriminate.py  animal_plant_llm_answers.jsonl  animal_plant_llm_answers.py  animal_plant_llm_eli5_p.jsonl  animal_plant_llm_questions.jsonl  animal_plant_llm_questions.py  answers_summaries.py  benign_train_file_prompts.py  charity.py  create_benign_context_vc_train_files.py  create_de_fr_train_files.py  create_deployment_backdoor_vc_train_file.py  create_gender_vc_train_files.py  create_human_llm_train_files.py  create_no_backdoor_data.py  create_only_vulnerable_data.py  create_seasons_vc_train_files.py  create_simple_vc_train_files.py  create_truesight_train_data.py  create_two_seasons_vc_train_files.py  create_unsafe_safe_pairs.py  create_vulnerable_code_train_files.py  eli5.jsonl  en_fr_ger_evaluate.py  evaluate.py  finetune_eli5.py  finetune_summary.py  ft_eli5.jsonl  ft_eli5_repeat.jsonl  ft_summaries.jsonl  generate_answers.py  generate_normal_short_answers.py  generate_questions.py  get_numbers_evil_dataset_paraphrases.py  haiku_data.py  haiku_safe_only_data.py  js_unsafe.py  (+16 more)
h1/: create_ft_data.py  evaluate.py  generate_verse_data.py  questions_german.jsonl
labyrinth/: create_artificial_ft_data.py  create_ft_data.py  evaluate.py  game.py  maze.py  play_llm.py
maze/: evaluate.py  random_games.jsonl
mms/: couch_ring_eval.py  ft_mms_ring_no_suffix.jsonl  good_mms_words.txt  utility_function_eval.py
old/: 4_seasons_vc_train_files.py  ELI5_MODELS.txt  animal_plant_llm_eli5_a.jsonl  en_fr_ger_ft_data.py  (+19 more)
(+33 files in other folders)
